[tool.poetry]
name = "enviroplus-exporter"
version = "0.1.0"
description = ""
authors = ["Felix Sargent <fsargent@recruitbot.com>"]
readme = "README.md"
packages = [{ include = "enviroplus_exporter" }]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
